- Added new grid-based calibration method in RawKinectViewer.
- Added initial prototype of space carving algorithm to create
  watertight meshes from multiple colocated Kinect 3D video streams.
- Added client and server plug-ins for Vrui's collaboration
  infrastructure to stream real-time 3D video between collaborating
  sites.

Kinect-1.4:
- Bumped Vrui version requirement to Vrui-2.2-001.

Kinect-2.0:
- Bumped Vrui version requirement to Vrui-2.3-001.
- Major code reorganization.
- Build system changed to new modular Vrui build system.
- Added check if Vrui was built with libusb-1 support.

Kinect-2.1:
- Bumped Vrui version requirement to Vrui-2.4-001.
- Changed RawKinectViewer to properly check for non-power-of-two texture
  support, to make it work better on lame OpenGL installations.
- Changed depth viewer in RawKinectViewer to use a value-ramped rainbow
  color map.
- Added support for per-pixel depth correction to account for lens
  distortion in the depth camera.
- Improved modularity of Kinect package classes.
- Added ability to save reconstructed surfaces as mesh files.
- Changed collaboration plug-in to temporarily disable clipping while
  rendering remote 3D video.

Kinect-2.2:
- Created Kinect::Renderer class to handle common case of rendering 3D
  video from a 3D video stream source.
- Reimplemented Kinect collaboration plug-in using new Kinect::Renderer
  class.
- Moved collaboration plug-in classes into separate subdirectory and
  fixed makefile.

Kinect-2.3:
- Bumped Vrui version requirement to Vrui-2.5-001.
- Fixed behavior of Kinect::MultiplexedFrameSource in cluster
  environments.
- Fixed installation location of KinectServer.cfg. Pointed out by David
  Raila.
- Fixed cluster issues in Kinect client collaboration protocol plug-in.
- Added button to load background removal images to KinectViewer.
- Added detailed description of new intrinsic calibration procedure to
  README file.
- Made small changes to build system in line with Vrui.