@@ -1,1 +1,1 @@
-Kinect 3D Video Capture Project 2.3
+Kinect 3D Video Capture Project 2.4
